# gdown-async

./: LICENSE  README.md  pyproject.toml
src/gdown_async/: __init__.py  _callbacks.py  _download.py  _fetch.py  _file.py  _folder.py  _records.py  _url.py  _utils.py  _version.py  cli.py
src/gdown_async/cli/: __init__.py  _callbacks.py  _main.py
tools/: generate_init_files.py
